--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -19,7 +19,7 @@ jobs:
           server: ${{ secrets.FTP_SERVER }}
           username: ${{ secrets.FTP_USERNAME }}
           password: ${{ secrets.FTP_PASSWORD }}
-          server-dir: /public_html/dev/
+          server-dir: /public_html/MutesiDev/
           exclude: |
             **/.git*
             **/.git*/**
@@ -38,7 +38,7 @@ jobs:
           password: ${{ secrets.SSH_PASSWORD }}
           port: ${{ secrets.SSH_PORT }}
           script: |
-            cd public_html/dev
+            cd public_html/MutesiDev
             composer install --optimize-autoloader --no-dev
             php artisan migrate --force
             php artisan config:cache
