--- a/public/.htaccess
+++ b/public/.htaccess
@@ -3,6 +3,12 @@
         Options -MultiViews -Indexes
     </IfModule>
 
+    # Increase upload limits
+    php_value upload_max_filesize 10M
+    php_value post_max_size 12M
+    php_value max_execution_time 300
+    php_value memory_limit 256M
+
     RewriteEngine On
 
     # Handle Authorization Header
