--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -43,12 +43,14 @@ jobs:
             **/.github/**
 
       - name: Run deployment commands via SSH
-        uses: appleboy/ssh-action@master
+        uses: appleboy/ssh-action@v1.2.4
         with:
           host: ${{ secrets.SSH_HOST }}
           username: ${{ secrets.SSH_USERNAME }}
           password: ${{ secrets.SSH_PASSWORD }}
           port: ${{ secrets.SSH_PORT }}
+          protocol: tcp4
+          debug: true
           script: |
             cd public_html/MutesiDev
             composer install --optimize-autoloader --no-dev
@@ -56,4 +58,4 @@ jobs:
             php artisan config:cache
             php artisan route:cache
             php artisan view:cache
-            php artisan storage:link
+            php artisan storage:link || true
