--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -51,8 +51,11 @@ jobs:
           port: ${{ secrets.SSH_PORT }}
           protocol: tcp4
           debug: true
+          request_pty: true
           script: |
-            cd public_html/MutesiDev
+            whoami
+            pwd
+            cd ~/public_html/MutesiDev
             composer install --optimize-autoloader --no-dev
             php artisan migrate --force
             php artisan config:cache
